<resources>
    <string name="app_name">apkCavoshCafeS101</string>
    <string name="inicio">Inicio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favoritos">Favoritos</string>
    <string name="menu">Menú</string>
    <string name="perfil">Perfil</string>
    <string name="carrito">Carrito</string>
    <string name="empezar">Empezar</string>
    <string name="login_header">Let\'s get you signed in!</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="correo">Correo</string>
    <string name="passwordd">Contraseña</string>
    <string name="olvidastes_passwordd">¿ Olvidastes tu contraseña ?</string>
    <string name="content_description">contentDescription</string>
    <string name="ingresar_con">Ingresar con</string>
    <string name="login">Login</string>
    <string name="confirmar_passwordd">Confirmar contraseña</string>
    <string name="verificar">Verificar</string>
    <string name="guardar">Guardar</string>
    <string name="items">Items</string>
    <string name="categorias">Categorias</string>
    <string name="aplicar">Aplicar</string>
    <string name="siguiente">Siguiente</string>

</resources>