<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Registrar">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/sh_bg_header_police_blue" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="20dp"
            android:text="Let's get you registered!"
            android:textColor="@color/flesh"
            android:textSize="20sp"
            android:textStyle="bold" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="92dp"
        android:orientation="vertical" >

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnIngresar"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:background="@drawable/sh_bg_btn_bright_gray"
                android:text="@string/ingresar"
                android:textAllCaps="false"
                android:textColor="@color/gunmetal"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRegistrar"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="-36dp"
                android:background="@drawable/sh_bg_btn_carmine_pink"
                android:text="@string/registrar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:translationZ="5dp"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:endIconMode="clear_text"
            app:hintEnabled="false" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/se_bg_edt_police_blue"
                android:inputType="textPersonName"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textColorHint="@color/steel_teal"
                android:hint="Nombres" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:endIconMode="clear_text"
            app:hintEnabled="false" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/se_bg_edt_police_blue"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textColorHint="@color/steel_teal"
                android:hint="@string/correo" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPasswordd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/se_bg_edt_police_blue"
                android:inputType="textPassword"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textColorHint="@color/steel_teal"
                android:hint="@string/passwordd" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassworddConfirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/se_bg_edt_police_blue"
                android:inputType="textPassword"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textColorHint="@color/steel_teal"
                android:hint="@string/confirmar_passwordd" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="30dp"
            android:background="@drawable/sh_bg_btn_gunmetal"
            android:text="@string/guardar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <View
                android:layout_width="120dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/carmine_pink"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Registrar con"
                android:textColor="@color/police_blue"
                android:textStyle="bold"/>

            <View
                android:layout_width="120dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="end"
                android:background="@color/carmine_pink"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/ivFacebook"
                android:layout_width="108dp"
                android:layout_height="72dp"
                android:background="@drawable/sh_bg_btn_flesh"
                android:contentDescription="@string/content_description"
                android:padding="16dp"
                android:src="@drawable/ic_facebook"/>

            <ImageView
                android:id="@+id/ivGoogle"
                android:layout_width="108dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:background="@drawable/sh_bg_btn_flesh"
                android:contentDescription="@string/content_description"
                android:padding="16dp"
                android:src="@drawable/ic_google"/>

            <ImageView
                android:id="@+id/ivApple"
                android:layout_width="108dp"
                android:layout_height="72dp"
                android:layout_gravity="end"
                android:background="@drawable/sh_bg_btn_flesh"
                android:contentDescription="@string/content_description"
                android:padding="16dp"
                android:src="@drawable/ic_apple"/>

        </FrameLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="20dp"
        android:text="¿ Si estas registrado ?"
        android:textColor="@color/police_blue"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        android:text="Inicia Sesión"
        android:textColor="@color/carmine_pink"
        android:textStyle="bold"/>

</FrameLayout>